updated up until mid chapter 5

--- a/uw-ethesis.bib
+++ b/uw-ethesis.bib
@@ -9,6 +9,44 @@
 	address = {Tokyo, Japan}
 }
 
+@misc{IRAM,
+	title = {The Implicitly Restarted Arnoldi Method},
+	howpublished = {http://www.caam.rice.edu/software/ARPACK/UG/node45.html},
+	year = 1997,
+	author = {Chao Yang}
+}
+
+@article{gulcehre2017robust,
+	title={A Robust Adaptive Stochastic Gradient Method for Deep Learning},
+	author={Gulcehre, Caglar and Sotelo, Jose and Moczulski, Marcin and Bengio, Yoshua},
+	journal={arXiv preprint arXiv:1703.00788},
+	year={2017}
+}
+
+@article{simpson2015oddball,
+	title={" Oddball SGD": Novelty Driven Stochastic Gradient Descent for Training Deep Neural Networks},
+	author={Simpson, Andrew JR},
+	journal={arXiv preprint arXiv:1509.05765},
+	year={2015}
+}
+
+@article{neural1,
+	title={Neural Networks (Quantitative Applications in the Social Sciences)},
+	author={Abdi, Herve and Valentin, Dominique and Edelman, Betty},
+	journal={Sage University paper, Series},
+	number={5},
+	pages={10},
+	year={1999}
+}
+
+@book{neural2,
+	title={Principles of artificial neural networks},
+	author={Graupe, Daniel},
+	volume={7},
+	year={2013},
+	publisher={World Scientific}
+}
+
 @book{Goodfellow-et-al-2016,
 	title={Deep Learning},
 	author={Ian Goodfellow and Yoshua Bengio and Aaron Courville},
@@ -135,6 +173,16 @@
 	year = {1994},
 	journal = {Neural Computation 6.1},
 	pages = {147-160}
+}
+
+@article{wright1999numerical,
+	title={Numerical optimization},
+	author={Wright, Stephen J and Nocedal, Jorge},
+	journal={Springer Science},
+	volume={35},
+	number={67-68},
+	pages={7},
+	year={1999}
 }
 
 @book{demmel.book,
