--- a/uw-ethesis.bib
+++ b/uw-ethesis.bib
@@ -12,7 +12,7 @@
 @misc{IRAM,
 	title = {The Implicitly Restarted Arnoldi Method},
 	howpublished = {http://www.caam.rice.edu/software/ARPACK/UG/node45.html},
-	year = 1997,
+	year = {1997},
 	author = {Chao Yang}
 }
 
